cmake_minimum_required(VERSION 3.12)
project(Stackls C)
if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
	message("Detected OS: Micrsoft Windows")
	add_executable(${PROJECT_NAME} stackls.com.h stackls.win.h stackls.win.c)
	target_link_libraries(${PROJECT_NAME} "dbghelp.dll")
elseif(CMAKE_HOST_SYSTEM_NAME STREQUAL "Linux")
	message("Detected OS: GNU Linux")
	add_executable(${PROJECT_NAME} stackls.com.h stackls.nix.h stackls.nix.c)
endif()